Ensure that border of publications does not get cut off.

--- a/src/components/pages/Publications/styles.scss
+++ b/src/components/pages/Publications/styles.scss
@@ -122,4 +122,5 @@
 .research-article-scroll-container {
   max-height: 500px;
   overflow-y: scroll;
+  padding: 1rem;
 }
